--- a/learn/src/App.css
+++ b/learn/src/App.css
@@ -3,5 +3,14 @@
 }
 .btn {
   width: 120px;
+  height: 35px;
+  opacity: .8;
+}
+.btnS {
+  margin: 0 3px;
+  width: 30px;
   height: 30px;
+}
+.btn,.btnS:hover {
+  opacity: 1;
 }
