--- a/contact-manager-app/src/index.css
+++ b/contact-manager-app/src/index.css
@@ -1,14 +1,20 @@
 body {
     font-family: 'vazir' , 'tahoma' !important;
+    background-color: #282a36;
 }
-
-.input-group-text {
-    background-color: purple;
+input[type="text"]::-webkit-input-placeholder,
+input[type="email"]::-webkit-input-placeholder,
+input[type="number"]::-webkit-input-placeholder {
+    color: #f8f8f4;
 }
-.input {
-    background-color: gray;
+input[type="text"],
+input[type="email"],
+input[type="number"] {
+    color: #f8f8f4 !important;
+    background-color: #44475a !important;
+    border-color: #bd93f9 !important;
 }
-input.form-control {
-    border: 1px solid purple;
-    background-color: gray;
+.navbar-brand {
+    font-size: 15px;
+    letter-spacing: 1px;
 }
