--- a/my-books/src/App.css
+++ b/my-books/src/App.css
@@ -1,16 +1,7 @@
-.App {
-  text-align: center;
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-.btn {
-  width: 120px;
-  height: 35px;
-  opacity: .8;
-}
-.btnS {
-  margin: 0 3px;
-  width: 30px;
-  height: 30px;
-}
-.btn,.btnS:hover {
-  opacity: 1;
-}
+
