--- a/my-books/src/modules/Books.module.css
+++ b/my-books/src/modules/Books.module.css
@@ -1,5 +1,6 @@
 .nav {
     border-right: 1px solid black;
     display: inline;
-    padding: 25px 15px;
+    padding: 20px 15px;
+    margin: 0 20px;
 }
