--- a/contact-manager-app/src/index.css
+++ b/contact-manager-app/src/index.css
@@ -1,4 +1,26 @@
 body {
     font-family: 'vazir' , 'tahoma' !important;
-    /* background-color: #282a36; */
+    background-color: #282a36;
+}
+
+input[type="text"]::-webkit-input-placeholder,
+input[type="email"]::-webkit-input-placeholder,
+input[type="number"]::-webkit-input-placeholder {
+    color: #f8f8f4;
+    opacity: .7;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="number"]{
+    color: #f8f8f4 !important;
+    background-color: #44475a !important;
+    border-color: #bd93f9 !important;
+}
+
+.form-control {
+    background-color: #44475a !important;
+    color: #f8f8f4 !important;
+    border-color: #bd93f9 !important;
+    box-shadow: none !important;
 }
